--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "formik": "^2.2.9",
     "framer-motion": "^6.3.3",
     "react": "^18.1.0",
+    "react-alert": "^7.0.3",
     "react-dom": "^18.1.0",
+    "react-loading": "^2.0.3",
     "react-lottie": "^1.2.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-spring": "^9.4.5",
+    "react-toastify": "^9.0.1",
     "react-typical": "^0.1.3",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.0",
