--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aos": "^2.3.4",
     "axios": "^0.27.2",
     "firebase": "^9.9.2",
+    "firebase-tools": "^11.6.0",
     "formik": "^2.2.9",
     "framer-motion": "^6.3.3",
     "react": "^18.1.0",
